--- a/styles/style.css
+++ b/styles/style.css
@@ -74,7 +74,7 @@ ul {
     align-items: center;
     padding: 0;
     margin-top: 0;
-    overflow: scroll;
+    overflow: auto;
 }
 
 li {
@@ -152,7 +152,7 @@ li {
 #tasks
 {
     height: 70%;
-    overflow: scroll;
+    overflow: auto;
 }
 
 #unread, #read
@@ -172,7 +172,6 @@ li {
     border-radius: 7px;
     width: 100%;
     box-shadow: 0 0 20px #e8e7e7;
-    overflow: scroll;
 }
 
 .nav {
